convert js to ts

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,8 @@
   <head>
     <title>Gotta save 'em all!</title>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="main.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" src="./home.ts"></script>
   </head>
   <body>
     <h1>You Can't Expect To Win Every Single Battle...</h1>
