--- a/web/login/index.html
+++ b/web/login/index.html
@@ -9,8 +9,8 @@
     window.location.href = url;
   }
 
-  const login = 'https://gotta-save-them-all.auth.us-east-1.amazoncognito.com/login?response_type=code&client_id=351ntcgkgo32jeh3vqrbblb6i0&redirect_uri=http://localhost:8080/';
-  const signup = 'https://gotta-save-them-all.auth.us-east-1.amazoncognito.com/signup?response_type=code&client_id=351ntcgkgo32jeh3vqrbblb6i0&redirect_uri=http://localhost:8080/';
+  const login = 'https://gotta-save-them-all-login.auth.us-east-1.amazoncognito.com/login?response_type=code&client_id=5uc5eknh95m4golenj8208sueo&redirect_uri=http://localhost:8080/';
+  const signup = 'https://gotta-save-them-all-login.auth.us-east-1.amazoncognito.com/signup?response_type=code&client_id=5uc5eknh95m4golenj8208sueo&redirect_uri=http://localhost:8080/';
 </script>
 <style>
   body {
