add auth middleware.  you can get username from token as in auth method

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -9,8 +9,8 @@
     window.location.href = url;
   }
 
-  const login = 'https://gotta-save-them-all-login.auth.us-east-1.amazoncognito.com/login?response_type=code&client_id=5uc5eknh95m4golenj8208sueo&redirect_uri=http://localhost:8080/';
-  const signup = 'https://gotta-save-them-all-login.auth.us-east-1.amazoncognito.com/signup?response_type=code&client_id=5uc5eknh95m4golenj8208sueo&redirect_uri=http://localhost:8080/';
+  const login = 'https://gotta-save-them-all.auth.eu-west-1.amazoncognito.com/login?response_type=code&client_id=6rlqcs6d04lfm8h8kf6q7438ne&redirect_uri=http://localhost:8080/redirect';
+  const signup = 'https://gotta-save-them-all.auth.eu-west-1.amazoncognito.com/signup?response_type=code&client_id=6rlqcs6d04lfm8h8kf6q7438ne&redirect_uri=http://localhost:8080/redirect';
 </script>
 <style>
   body {
