pokemon card finalized

--- a/web/home/index.html
+++ b/web/home/index.html
@@ -23,12 +23,12 @@
       </nav>
     </header>
     <div id="pokemonCard" class="pokemon-card">
-      <div class="pokemon-hp">HP:</div>
-      <img class="pokemon-art" src="../assets/bulb.png" />
-      <div class="pokemon-type">Type</div>
-      <div class="pokemon-attack">Attack</div>
-      <div class="pokemon-defense">Defense</div>
-      <div class="pokemon-speed">Speed</div>
+      <div id="pokemonHp" class="pokemon-hp"></div>
+      <img id="pokemonArt" class="pokemon-art" src="" />
+      <div id="pokemonType" class="pokemon-type"></div>
+      <div id="pokemonAttack" class="pokemon-attack"></div>
+      <div id="pokemonDefense" class="pokemon-defense"></div>
+      <div id="pokemonSpeed" class="pokemon-speed"></div>
     </div>
     <div class="center-on-page">
       <div class="pokeball"></div>
