--- a/web/login/index.html
+++ b/web/login/index.html
@@ -9,8 +9,8 @@
     window.location.href = url;
   }
 
-  const login = 'https://gotta-save-them-all.auth.eu-west-1.amazoncognito.com/login?response_type=code&client_id=6rlqcs6d04lfm8h8kf6q7438ne&redirect_uri=http://localhost:8080/redirect';
-  const signup = 'https://gotta-save-them-all.auth.eu-west-1.amazoncognito.com/signup?response_type=code&client_id=6rlqcs6d04lfm8h8kf6q7438ne&redirect_uri=http://localhost:8080/redirect';
+  const login = 'https://gotta-save-them-all.auth.eu-west-1.amazoncognito.com/login?response_type=code&client_id=6rlqcs6d04lfm8h8kf6q7438ne&redirect_uri=https://qf78x42ctm.eu-west-1.awsapprunner.com/redirect';
+  const signup = 'https://gotta-save-them-all.auth.eu-west-1.amazoncognito.com/signup?response_type=code&client_id=6rlqcs6d04lfm8h8kf6q7438ne&redirect_uri=https://qf78x42ctm.eu-west-1.awsapprunner.com/redirect';
 </script>
 <style>
   body {
