--- a/web/home/index.html
+++ b/web/home/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="../home/index.html">Catch</a></li>
-          <li><a href="../views/collection.html">Collection</a></li>
+          <li><a href="../collection/index.html">Collection</a></li>
           <li><a href="../login/index.html">Logout</a></li>
         </ul>
       </nav>
